--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -8,8 +8,10 @@
             
             <h3> New sources</h3>
              <ul>
-                {% for source in display %}
-                    <li>{{source.name}}</li>:{{source.url}}}
+                {% for article in articles %}
+                    <li>{{article.author}}</li>:
+                    <img src="{{article.urlToImage}}" alt="">
+                    
                 {% endfor %}
             </ul>
   
