--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,6 +1,12 @@
 {% macro displaySources(sources) %}
     {% for source in sources %}
-        <li>{{source.name}}</li><a href = '/news/{{source.id}}'>{{source.name}}</a>
+    <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 card">
+           
+            <li class="text-center">
+                    <a href = '/news/{{source.id}}'>{{source.name}}</a>
+            </li>
+        </div>
+        
 
     {% endfor %}
 {% endmacro %}
