--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -3,7 +3,7 @@
     <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 card">
            
             <li class="text-center">
-                    <a href = '/news/{{source.id}}'>{{source.name}}</a>
+                    <a href = '/news/{{source.id}}'>{{source.name}}</a><br>
             </li>
         </div>
         
