--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -16,7 +16,7 @@
                     <div class='card'>
                         <div class="card-header"><b>{{article.title}}</b></div>
                         <div class='card-body'>
-                            <img src="{{article.urlToImage}}" alt="" width='300' height='200'><br>
+                            <img src="{{article.urlToImage}}" alt="Image not found" width='300' height='200'><br>
                              {{article.description}}<br>
 
                             <div class='card-footer'>
