added shortcut icon link

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %} {% import 'macros.html' as macro %}
+<head>
+    <title>NEWS SOURCES</title>
+    <link rel="shortcut icon" href="http://www.itcpltech.com/images/new-portal21.png">
+</head>
+
 
 
 <body>
