--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title> Welcome to the best Movie Review website </title>
+        <title> NEWS </title>
     </head>
     <body>
         <!-- Content block -->
