--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,48 +5,48 @@
 <body>
     {% block styles%} {{ super() }}
     <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}"> {% endblock %} {% block content %}
-    <div class='row'>
-        <div class='head'><h1>GENERAL</h1></div>
-        <ul>
-            {{macro.displaySources(general)}}
-        </ul>
-    </div>
-    <div class='row'>
-        <div class='head'><h1>SPORTS</h1></div>
-        <ul>
-            {{macro.displaySources(sports)}}
-        </ul>
-    </div>
-    <div class='row'>
-        <div class='head'><h1>BUSINESS</h1></div>
-        <ul>
-            {{macro.displaySources(business)}}
-        </ul>
-    </div>
-    <div class='row'>
-        <div class='head'><h1>TECHNOLOGY</h1></div>
-        <ul>
-            {{macro.displaySources(technology)}}
-        </ul>
-    </div>
-    <div class='row'>
-        <div class='head'><h1>ENTERTAINMENT</h1></div>
-        <ul>
-            {{macro.displaySources(entertainment)}}
-        </ul>
-    </div>
-    <div class='row'>
-        <div class='head'><h1>SCIENCE</h1></div>
-        <ul>
-            {{macro.displaySources(science)}}
-        </ul>
-    </div>
-    <div class='row'>
-        <div class='head'><h1>HEALTH</h1></div>
-        <ul>
-            {{macro.displaySources(health)}}
-        </ul>
-    </div>
+    <div class="card-body">
+        <h3 class="card-title">General News Sources</h3>
+        <div class="row">
+          {{macro.displaySourceList(general)}}
+        </div>
+      </div>
+      <div class="card-body">
+        <h3 class="card-title">Business News Sources</h3>
+        <div class="row">
+          {{macro.displaySourceList(business)}}
+        </div>
+      </div>
+    <<div class="card-body">
+        <h3 class="card-title">General News Sources</h3>
+        <div class="row">
+          {{macro.displaySourceList(sports)}}
+        </div>
+      </div>
+      <div class="card-body">
+        <h3 class="card-title">General News Sources</h3>
+        <div class="row">
+          {{macro.displaySourceList(health)}}
+        </div>
+      </div>
+      <div class="card-body">
+        <h3 class="card-title">General News Sources</h3>
+        <div class="row">
+          {{macro.displaySourceList(science)}}
+        </div>
+      </div>
+      <div class="card-body">
+        <h3 class="card-title">ntertainment News Sources</h3>
+        <div class="row">
+          {{macro.displaySourceList(entertainment)}}
+        </div>
+      </div>
+      <div class="card-body">
+        <h3 class="card-title">General News Sources</h3>
+        <div class="row">
+          {{macro.displaySourceList(general)}}
+        </div>
+      </div>
 
     {% endblock %}
 </body>
