--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,13 +30,13 @@
         </div>
       </div>
       <div class="card-body">
-        <h3 class="card-title">General News Sources</h3>
+        <h3 class="card-title">Science News Sources</h3>
         <div class="row">
           {{macro.displaySourceList(science)}}
         </div>
       </div>
       <div class="card-body">
-        <h3 class="card-title">ntertainment News Sources</h3>
+        <h3 class="card-title">Entertainment News Sources</h3>
         <div class="row">
           {{macro.displaySourceList(entertainment)}}
         </div>
