--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -24,7 +24,7 @@
         </div>
       </div>
       <div class="card-body">
-        <h3 class="card-title">General News Sources</h3>
+        <h3 class="card-title">Health News Sources</h3>
         <div class="row">
           {{macro.displaySourceList(health)}}
         </div>
