--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
         </div>
       </div>
     <<div class="card-body">
-        <h3 class="card-title">General News Sources</h3>
+        <h3 class="card-title">Sports News Sources</h3>
         <div class="row">
           {{macro.displaySourceList(sports)}}
         </div>
@@ -42,9 +42,9 @@
         </div>
       </div>
       <div class="card-body">
-        <h3 class="card-title">General News Sources</h3>
+        <h3 class="card-title">Technology News Sources</h3>
         <div class="row">
-          {{macro.displaySourceList(general)}}
+          {{macro.displaySourceList(technology)}}
         </div>
       </div>
 
