--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,56 +1,5 @@
 {% extends 'base.html' %} {% import 'macros.html' as macro %}
 
-
-
-<body>
-    {% block styles%} {{ super() }}
-    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}"> {% endblock %} {% block content %}
-    <div class="card-body">
-        <h3 class="card-title">General News Sources</h3>
-        <div class="row">
-          {{macro.displaySourceList(general)}}
-        </div>
-      </div>
-      <div class="card-body">
-        <h3 class="card-title">Business News Sources</h3>
-        <div class="row">
-          {{macro.displaySourceList(business)}}
-        </div>
-      </div>
-    <<div class="card-body">
-        <h3 class="card-title">Sports News Sources</h3>
-        <div class="row">
-          {{macro.displaySourceList(sports)}}
-        </div>
-      </div>
-      <div class="card-body">
-        <h3 class="card-title">Health News Sources</h3>
-        <div class="row">
-          {{macro.displaySourceList(health)}}
-        </div>
-      </div>
-      <div class="card-body">
-        <h3 class="card-title">Science News Sources</h3>
-        <div class="row">
-          {{macro.displaySourceList(science)}}
-        </div>
-      </div>
-      <div class="card-body">
-        <h3 class="card-title">Entertainment News Sources</h3>
-        <div class="row">
-          {{macro.displaySourceList(entertainment)}}
-        </div>
-      </div>
-      <div class="card-body">
-        <h3 class="card-title">Technology News Sources</h3>
-        <div class="row">
-          {{macro.displaySourceList(technology)}}
-        </div>
-      </div>
-
-    {% endblock %}
-</body>
-
 <Style>
     .head {
         margin-left: 600px;
@@ -58,4 +7,70 @@
     body{
         background-color: bisque;
     }
+    .card-body{
+      background-color: aqua
+
+    }
+    .row{
+      background-color: bisque
+
+    }
+    .card-title{
+      background-color: darkorange
+
+    }
 </Style>
+
+
+
+<body>
+    {% block styles%} {{ super() }}
+    <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}"> {% endblock %} {% block content %}
+
+    <div class='container'>
+          <div class="card-body">
+        <h3 class="card-title">General News Sources</h3>
+        <div class="row">
+          {{macro.displaySources(general)}}
+        </div>
+      </div>
+      <div class="card-body">
+        <h3 class="card-title">Business News Sources</h3>
+        <div class="row">
+          {{macro.displaySources(business)}}
+        </div>
+      </div>
+      <div class="card-body">
+        <h3 class="card-title">Sports News Sources</h3>
+        <div class="row">
+          {{macro.displaySources(sports)}}
+        </div>
+      </div>
+      <div class="card-body">
+        <h3 class="card-title">Health News Sources</h3>
+        <div class="row">
+          {{macro.displaySources(health)}}
+        </div>
+      </div>
+      <div class="card-body">
+        <h3 class="card-title">Science News Sources</h3>
+        <div class="row">
+          {{macro.displaySources(science)}}
+        </div>
+      </div>
+      <div class="card-body">
+        <h3 class="card-title">Entertainment News Sources</h3>
+        <div class="row">
+          {{macro.displaySources(entertainment)}}
+        </div>
+      </div>
+      <div class="card-body">
+        <h3 class="card-title">Technology News Sources</h3>
+        <div class="row">
+          {{macro.displaySources(technology)}}
+        </div>
+      </div>
+    </div>
+
+    {% endblock %}
+</body>
