--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,10 +1,11 @@
 .card-body{
-        background-color:  bisque
+        background-color:  rgba(255, 228, 196, 0.678)
 }
 .card-title{
-        background-color: darkorange
+        background-color: rgba(255, 140, 0, 0.61)
 }
 .row{
-        background-color:  aqua
+
+        background-color:  rgba(0, 255, 255, 0.733)
 
 }
